# tier-mobility-tech-test

./: Cargo.toml  README.md  Rocket.toml  docker-compose.yaml  rustfmt.toml  shortener.Dockerfile
public/: index.html
src/: main.rs  rand.rs
