[package]
name    = "short-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
mongodb = "2.6.1"
rand_core = "0.6.4"
rand_hc = "0.3.2"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
